# apka

./: CMakeLists.txt  OPENCV_TUT.txt  README.md  TestApp1.cpp
